results/SVCOMP/conversational/log-java_append_char-2024_03_13_23_39_58.txt
class Main {
    //@ ensures \result ==> tmp.equals("diffblue");
    //@ ensures !\result ==> !tmp.equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff).append(blue);

        String tmp = buffer.toString();
        if (b) return (tmp.equals("diffblue"));
        else return (!tmp.equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> tmp.equals("diffblue");
                            ^
  symbol:   variable tmp
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !tmp.equals("diffblue");
                              ^
  symbol:   variable tmp
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> buffer.toString().equals("diffblue");
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff).append(blue);

        if (b) return (buffer.toString().equals("diffblue"));
        else return (!buffer.toString().equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("diffblue");
                            ^
  symbol:   variable buffer
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
                              ^
  symbol:   variable buffer
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> buffer.toString().equals("diffblue");
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff).append(blue);

        if (b) return (buffer.toString().equals("diffblue"));
        else return (!buffer.toString().equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("diffblue");
                            ^
  symbol:   variable buffer
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
                              ^
  symbol:   variable buffer
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> buffer.toString().equals("diffblue");
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        if (b) return (buffer.toString().equals("diffblue"));
        else return (!buffer.toString().equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("diffblue");
                            ^
  symbol:   variable buffer
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
                              ^
  symbol:   variable buffer
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> buffer.toString().equals("diffblue");
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        if (b) return (buffer.toString().equals("diffblue"));
        else return (!buffer.toString().equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("diffblue");
                            ^
  symbol:   variable buffer
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
                              ^
  symbol:   variable buffer
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> tmp.equals("diffblue");
    //@ ensures !\result ==> !tmp.equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        String tmp = buffer.toString();
        if (b) return (tmp.equals("diffblue"));
        else return (!tmp.equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> tmp.equals("diffblue");
                            ^
  symbol:   variable tmp
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !tmp.equals("diffblue");
                              ^
  symbol:   variable tmp
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> buffer.toString().equals("diffblue");
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        if (b) return (buffer.toString().equals("diffblue"));
        else return (!buffer.toString().equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("diffblue");
                            ^
  symbol:   variable buffer
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
                              ^
  symbol:   variable buffer
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> tmp.equals("diffblue");
    //@ ensures !\result ==> !tmp.equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        String tmp = buffer.toString();
        if (b) return (tmp.equals("diffblue"));
        else return (!tmp.equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> tmp.equals("diffblue");
                            ^
  symbol:   variable tmp
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !tmp.equals("diffblue");
                              ^
  symbol:   variable tmp
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> buffer.toString().equals("diffblue");
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        if (b) return (buffer.toString().equals("diffblue"));
        else return (!buffer.toString().equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("diffblue");
                            ^
  symbol:   variable buffer
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !buffer.toString().equals("diffblue");
                              ^
  symbol:   variable buffer
  location: class Main
2 errors

class Main {
    //@ ensures \result ==> tmp.equals("diffblue");
    //@ ensures !\result ==> !tmp.equals("diffblue");
    public static boolean f(boolean b) {
        char[] diff = {'d', 'i', 'f', 'f'};
        char[] blue = {'b', 'l', 'u', 'e'};

        StringBuilder buffer = new StringBuilder();

        buffer.append(diff);
        buffer.append(blue);

        String tmp = buffer.toString();
        if (b) return (tmp.equals("diffblue"));
        else return (!tmp.equals("diffblue"));
    }
}
/home/max/Documents/JMLGPT/tmp/java_append_char.java:2: error: cannot find symbol
    //@ ensures \result ==> tmp.equals("diffblue");
                            ^
  symbol:   variable tmp
  location: class Main
/home/max/Documents/JMLGPT/tmp/java_append_char.java:3: error: cannot find symbol
    //@ ensures !\result ==> !tmp.equals("diffblue");
                              ^
  symbol:   variable tmp
  location: class Main
2 errors

